# pcloud-sync

./: .gitignore  README.md  config.json  requirements.txt  setup.cfg  setup.py
scripts/: run.sh
sync/: auth.py  scheduler.py  settings.py
sync/server/: admin.py  api.py  app.py  config.py  extensions.py
sync/server/templates/admin/: admin_master.html  index.html  sync_config.html  sync_form.html
