[metadata]
name = pcloud-sync
version = 0.0.1
author = Guillaume BRINON
license = GPLv3
description = Allows headless synchronization of a pcloud repository with local folder
keywords =
url =
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development
